--- a/Templates/aduithistory.html
+++ b/Templates/aduithistory.html
@@ -106,7 +106,7 @@
                             <th>问句</th>
                             <th>审核状态</th>
                             <th>检索时间</th>
-                            <th>修改实践</th>
+                            <th>修改时间</th>
                             <th>操作</th>
                         </tr>
                         </thead>
