--- a/Templates/peoplemanage.html
+++ b/Templates/peoplemanage.html
@@ -82,10 +82,11 @@
     <input type="text" id="ctx" hidden="hidden" th:value="">
     <div class="search">
         <div class="input-group col-md-8">
-            <button class="btn btn-success" type="button" id="add" hidden>
+
+            <h3>人员管理&nbsp;</h3>
+            <button class="btn btn-success" type="button" id="add">
                 添加
             </button>
-            <h3>人员管理&nbsp;</h3>
             <input class="form-control" type="text" id="username" placeholder="请输入名字，按回车键">
             <span class="input-group-btn">
 					<button class="btn btn-primary" type="button" id="search">
@@ -102,11 +103,12 @@
                     <table class="table table-striped table-hover" id="dataTable">
                         <thead>
                         <tr>
-                            <th>ip</th>
-                            <th>问句</th>
-                            <th>审核状态</th>
-                            <th>检索时间</th>
-                            <th>修改实践</th>
+                            <th>用户名</th>
+                            <th>密码</th>
+                            <th>工号</th>
+                            <th>状态</th>
+                            <th>创建时间</th>
+                            <th>修改修改</th>
                             <th>操作</th>
                         </tr>
                         </thead>
@@ -146,12 +148,12 @@
                     <input type="text" class="form-control" id="m_password" placeholder="">
                 </div>
                 <div class="form-group">
-                    <label class="control-label" for="m_email">邮箱：</label>
-                    <input type="text" class="form-control" id="m_email" placeholder="">
+                    <label class="control-label" for="m_work_no">工号：</label>
+                    <input type="text" class="form-control" id="m_work_no" placeholder="">
                 </div>
                 <div class="form-group">
-                    <label class="control-label" for="m_truename">姓名：</label>
-                    <input type="text" class="form-control" id="m_truename" placeholder="">
+                    <label class="control-label" for="m_truename">状态：</label>
+                    <input type="text" class="form-control" id="m_truename" placeholder="启用" disabled>
                 </div>
             </div>
             <div class="modal-footer">
@@ -193,10 +195,10 @@
     function getPage(pageNo) {
         var dataRow = "";
         $.ajax({
-                url: ctx + "searchBackwardHistory",
+                url: ctx + "adminpage",
                 type: "post",
                 data: {
-                    "username": $("#username").val(),
+                    "work_no": $("#username").val(),
                     "pageNo": pageNo,
                     "ip": window.ipJson.ip
                 },
@@ -207,17 +209,20 @@
                         $.each(response.data.records, function (i, r) {
                             console.log(r)
                             dataRow += '<tr>'
-                                + '<td>' + r.mac_address + '</td>'
-                                + '<td>' + r.search_data + '</td>'
-                                + '<td>' + transformaudit(r.audit) + '</td>'
-                                + '<td>' + r.insert_time + '</td>'
+                                + '<td>' + r.username + '</td>'
+                                + '<td>' + r.password + '</td>'
+                                + '<td>' + r.work_no + '</td>'
+                                + '<td>' + transformaudit(r.status) + '</td>'
+                                + '<td>' + r.create_time + '</td>'
                                 + '<td>' + r.update_time + '</td>'
                             ;
 
                             dataRow += '<td>'
-                                + '<a href="javascript:aduittrue(' + r.id + ')">通过</a>'
+                                + '<a href="javascript:aduittrue(' + r.id + ')">启用</a>'
                                 + '&nbsp;&nbsp;'
-                                + '<a href="javascript:aduitfalse(' + r.id + ')" style="color: #CA0C16;">否决</a>'
+                                + '<a href="javascript:aduitfalse(' + r.id + ')" style="color: #CA0C16;">禁用</a>'
+                                + '&nbsp;&nbsp;'
+                                + '<a href="javascript:resetpassword(' + r.id + ')" style="color: #caa40c;">重置密码</a>'
                                 + '</td>'
                                 + '</tr>';
                         });
@@ -260,25 +265,47 @@
     }
 
     function transformaudit(auditstatus) {
-        if (auditstatus == -1) {
-            return "否决"
-        } else if (auditstatus == 0) {
-            return "未审核"
+        if (auditstatus == 1) {
+            return "启用"
         } else {
-            return "通过"
+            return "禁用"
         }
     }
 
     //删除
     function aduitfalse(id) {
-        if (confirm("确定否决问句？")) {
+        if (confirm("确定禁用用户？")) {
             $.ajax({
                 type: "POST",
-                url: ctx + "searchupdate",
+                url: ctx + "adminaudit",
                 dataType: "json",
                 data: {
                     id: id,
-                    audit: -1
+                    status: -1
+                },
+                success: function (data) {
+                    getPage(1);
+                },
+                error: function (e) {
+                    //alert("ERROR: ", e);
+                    console.log("ERROR: ", e);
+                }
+            });
+        }
+    }
+
+
+
+    //重置密码
+    function resetpassword(id) {
+        if (confirm("确定是否重置密码？")) {
+            $.ajax({
+                type: "POST",
+                url: ctx + "adminresetpassword",
+                dataType: "json",
+                data: {
+                    id: id,
+                    status: -1
                 },
                 success: function (data) {
                     getPage(1);
@@ -295,11 +322,11 @@
 
         $.ajax({
             type: "POST",
-            url: ctx + "searchupdate",
+            url: ctx + "adminaudit",
             dataType: "json",
             data: {
                 id: id,
-                audit: 1
+                status: 1
             },
             success: function (data) {
                 getPage(1);
@@ -339,25 +366,25 @@
         var id = $("#m_id").val();
         var username = $("#m_username").val();
         var password = $("#m_password").val();
-        var email = $("#m_email").val();
+        var work_no = $("#m_work_no").val();
         var truename = $("#m_truename").val();
 
-        var param = {"id": id, username: username, password: password, email: email, truename: truename};
+        var param = { username: username, password: password, work_no: work_no};
 
         $.ajax({
-            url: ctx + "/user/modify",
+            url: ctx + "/createadmin",
             type: "POST",
             contentType: "application/json",
             dataType: "json",
             data: JSON.stringify(param),
             success: function (data) {
-                if (data.success) {
+                if (data.status==0) {
                     // 清空表单
                     reset();
                     $('#modify').modal('hide');
                     getPage(1);
                 } else {
-                    alert(data.message);
+                    alert("用户名或者账号已存在");
                 }
             }
         });
@@ -367,8 +394,8 @@
         $("#m_id").val("");
         $("#m_username").val("");
         $("#m_password").val("");
-        $("#m_email").val("");
-        $("#m_truename").val("");
+        $("#m_work_no").val("");
+
     }
 </script>
 </body>
