--- a/Templates/backwardindex.html
+++ b/Templates/backwardindex.html
@@ -57,7 +57,10 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <!--<input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">-->
-    <ul class="navbar-nav px-3">
+    <ul class="navbar-nav ">
+        <li class="nav-item text-nowrap">
+            <a class="nav-link" id="modify_password"> &nbsp;&nbsp;修改密码</a>
+        </li>
         <li class="nav-item text-nowrap">
             <a class="nav-link" href="#">当前用户：<span class="badge">{{ username }}</span></a>
         </li>
@@ -90,8 +93,8 @@
                         </a>
                     </li>
 
-                    <li id="renyaunli" class="nav-item " >
-                        <a  class="nav-link  menua "
+                    <li id="renyaunli" class="nav-item ">
+                        <a class="nav-link  menua "
                            href='peoplemanage?id={{ id }}&username=+{{ username }}' target="mainFrame">
                             <span data-feather="home"></span>
                             人员管理
@@ -108,7 +111,45 @@
         </main>
     </div>
 </div>
+<!-- 找回密码框 -->
+<div class="modal fade" id="searchPwd-window" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">重置密码</h4>
+            </div>
+            <div class="modal-body">
+                <form class="form-inline" role="form">
+                    <label>用&ensp;户&ensp;名:</label><input id="resetusername" class="form-control"
+                                                             value="{{ username }}"
+                                                             placeholder="请输入您的用户名"/>
+                    <br/>
+                    <br/>
 
+                    <label>新&ensp;密&ensp;码:</label><input id="resetpassword" class="form-control"
+                                                             placeholder="请设置您的新密码(不少于8位)"/>
+                    <br/>
+                    <br/>
+                    <label>确认密码:</label><input id="resetcofirmpassword" class="form-control"
+                                                   placeholder="请再次确认您的新密码"/>
+                    <br/>
+                    <br/>
+                    <label>工&ensp;&ensp;&ensp;&ensp;号:</label><input id="resetworkno" class="form-control" disabled
+                                                                       value="{{ workno }}"/>
+
+                    <br/>
+                    <br/>
+
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" id="resetPwd" @click="resetPwd" class="btn btn-primary">重置密码</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <!-- 底部页脚部分 -->
 <div class="footer">
@@ -118,16 +159,56 @@
 </div>
 <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script>
     window.onload = function () {
         var flaskid = {{ id }};
-        if (flaskid == 1) {
-            console.log("-----------------运行到这------------")
-            console.log($("#renyaunli"))
-            $("#renyaunli").addClass('hidden')
+        if (flaskid != 1) {
+
+            $("#renyaunli").hide()
 
         }
 
+        $('#modify_password').click(function () {
+
+
+            $('#resetpassword').val("")
+            $('#resetcofirmpassword').val("")
+            $('#searchPwd-window').modal('show');
+        });
+
+
+        resetPwd.onclick = function () {
+
+            let resetusername = document.getElementById('resetusername');
+            let resetpassword = document.getElementById('resetpassword');
+            let resetcofirmpassword = document.getElementById('resetcofirmpassword');
+            let resetworkno = document.getElementById('resetworkno');
+            if (resetusername.value == "" || resetpassword.value == "") {
+                alert("用户名、密码不能为空")
+                return
+            }
+            if (resetpassword.value != resetcofirmpassword.value) {
+                alert("两次密码不一致")
+                return
+            }
+            var onclickdata = "username=" + resetusername.value + "&password=" + resetpassword.value + "&work_no=" + resetworkno.value
+            axios.request({
+                url: "http://localhost:5000/updateadminself",
+                method: "post",
+                data: onclickdata
+            }).then(res => {
+
+                if (res.data.status == -1) {
+                    alert("用户名已存在")
+                } else {
+                    alert("修改成功")
+                    $('#searchPwd-window').modal('hide');
+                }
+
+
+            })
+        }
 
     }
 </script>
