--- a/Templates/backwardindex.html
+++ b/Templates/backwardindex.html
@@ -111,45 +111,51 @@
         </main>
     </div>
 </div>
-<!-- 找回密码框 -->
+
 <div class="modal fade" id="searchPwd-window" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
      aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">重置密码</h4>
+                <h5 class="modal-title" id="exampleModalLabel">重置密码</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
             <div class="modal-body">
-                <form class="form-inline" role="form">
-                    <label>用&ensp;户&ensp;名:</label><input id="resetusername" class="form-control"
-                                                             value="{{ username }}"
-                                                             placeholder="请输入您的用户名"/>
-                    <br/>
-                    <br/>
-
-                    <label>新&ensp;密&ensp;码:</label><input id="resetpassword" class="form-control"
-                                                             placeholder="请设置您的新密码(不少于8位)"/>
-                    <br/>
-                    <br/>
-                    <label>确认密码:</label><input id="resetcofirmpassword" class="form-control"
+                <input type="text" id="m_id" hidden="hidden">
+                <div class="form-group">
+                    <label class="control-label" for="resetusername">用户名：</label>
+                    <input id="resetusername" class="form-control" value="{{ username }}"
+                           placeholder="请输入您的用户名"/>
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="resetpassword">密码：</label>
+                    <input id="resetpassword" class="form-control"
+                           placeholder="请设置您的新密码(不少于8位)"/>
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="resetcofirmpassword">确认密码:</label>
+                    <input id="resetcofirmpassword" class="form-control"
                                                    placeholder="请再次确认您的新密码"/>
-                    <br/>
-                    <br/>
-                    <label>工&ensp;&ensp;&ensp;&ensp;号:</label><input id="resetworkno" class="form-control" disabled
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="resetworkno">工号：</label>
+                    <input id="resetworkno" class="form-control" disabled
                                                                        value="{{ workno }}"/>
+                </div>
 
-                    <br/>
-                    <br/>
-
-                </form>
             </div>
             <div class="modal-footer">
-                <button type="button" id="resetPwd" @click="resetPwd" class="btn btn-primary">重置密码</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                <button id="resetPwd" type="button" class="btn btn-primary" >提交</button>
             </div>
         </div>
+        <!-- /.modal-content -->
     </div>
+    <!-- /.modal -->
 </div>
+
 
 <!-- 底部页脚部分 -->
 <div class="footer">
@@ -162,7 +168,7 @@
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script>
     window.onload = function () {
-        var flaskid = {{ id }};
+        var flaskid = {{id}};
         if (flaskid != 1) {
 
             $("#renyaunli").hide()
