--- a/Templates/backwardlogin.html
+++ b/Templates/backwardlogin.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>登录</title>
+    <title>后台登陆页</title>
     <!-- 引入 jquery、Bootstrap -->
     <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
@@ -56,12 +56,13 @@
 
 <ul style="position:absolute;top:20px;right:20px">
     <li>
-        <button class="btn btn-warning pull-right"><a href="index">前台管理</a></button>
+        <button class="btn btn-warning pull-right"><a href="index"><font color="black">前台主页</font></a></button>
     </li>
 </ul>
 <!-- 登录表单 -->
 <div class="login-form">
     <center><span>文化遗产管理系统</span></center>
+    <div style="height: 5px"></div>
     <div class="form-group">
         <label for="login_username" style="color: white">用户名</label>
         <input type="text" class="form-control" id="login_username" placeholder="请输入您的用户名或手机号">
@@ -77,8 +78,8 @@
             <div id="login-success-alert-success" class="alert alert-success hide">登陆成功！</div>
         </center>
         <br/>
-        <a id="searchPwd" data-toggle="modal" onclick="alert('请联系超级管理员予以重置密码')">忘记密码</a>
-        <a id="toRegister" data-toggle="modal" onclick="alert('请联系超级管理员予以注册')">立即注册</a>
+        <a id="searchPwd" data-toggle="modal" onclick="alert('请联系超级管理员予以重置密码')"><font color="#ffffff">忘记密码</font></a>
+        <a id="toRegister" data-toggle="modal" onclick="alert('请联系超级管理员予以注册')"><font color="#ffffff">立即注册</font></a>
     </div>
 </div>
 
